hphp/hack/test/typecheck/reactive/mutable_args5.php.exp
File "mutable_args5.php", line 8, characters 5-6:
`$this` here is mutable. You cannot create a new reference to it. (Typing[4268])
